added instructions for usage

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.4.2/Rx.min.js"></script>
     </head>
     <body>
-        <h1>Rxjs Keydown/Keyup Example</h1>
+        <h1>Rxjs Keydown/Keyup Exmple</h1>
         <div id="buffer">
-            <h2 id="key"></h2>
+            <h2>Enter a key</h2>
+            <h3 id="key"></h3>
         </div>
         <script>
             const keyArea = document.getElementById('key');
